[package]
name = "letters_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.7"}
bevy-inspector-egui = "0.11"
rand = "0.8.5"
bevy_rapier2d = { version = "0.14.1", features = [ "simd-stable", "debug-render" ] }
bevy_asset_loader = { version = "0.11", features = [ "2d" ] }
bevy_ecs_tilemap = {version = "0.6.0"}
bevy_ecs_ldtk = "0.3.0"
bevy_retrograde = { git = "https://github.com/katharostech/bevy_retrograde.git" }
serde = {version = "1.0.138"}

# [build]
# rustc-wrapper = "C:/Users/Salman/.cargo/bin/sccache.exe"